fix: non-gatsby image img tags overflowing viewport width

--- a/src/styles/blog.less
+++ b/src/styles/blog.less
@@ -43,7 +43,8 @@
     img {
       &:not(.gatsby-resp-image-image) {
         display: block;
-        max-width: 500px;
+        width: 500px;
+        max-width: 100%;
         margin: auto;
       }
 
